# rember-cli

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  concerns.md  run_dev.sh  todo.md
fixtures/: package.json
new-project/: package.json
src/: component.rs  lib.rs  main.rs  new.rs  serve.rs  utils.rs
src/commands/: command.rs  create.rs  mod.rs
src/fixtures/: config.rs  html.rs  js.rs  json.rs  mod.rs  templates.rs  txt.rs
src/models/: mod.rs  project.rs
tests/: new.rs  utils.rs
